lib_LTLIBRARIES = libbirb2d.la
libbirb2d_la_CPPFLAGS = -I $(top_srcdir)/include
libbirb2d_la_SOURCES = audio.cpp circle.cpp color.cpp diagnostics.cpp entity.cpp filesystem.cpp font.cpp graphs.cpp line.cpp logger.cpp math.cpp physics.cpp polygon.cpp random.cpp rect.cpp renderwindow.cpp resources.cpp_ scene.cpp sceneobject.cpp texture.cpp_ timer.cpp timestep.cpp ui.cpp utils.cpp values.cpp vector.cpp
