check_PROGRAMS = doctest
doctest_CPPFLAGS = -I $(top_srcdir)/include
doctest_SOURCES = $(libbirb2d_la_SOURCES) audio_test.cpp circle_test.cpp color_test.cpp doctest_entry.cpp entity_test.cpp filesystem_test.cpp font_test.cpp graph_test.cpp line_test.cpp logger_test.cpp Makefile math_test.cpp physics_test.cpp polygon_test.cpp random_test.cpp rect_test.cpp renderwindow_test.cpp scene_test.cpp timer_test.cpp utils_test.cpp values_test.cpp vector_test.cpp
